--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,9 @@ body{
     display: flexbox;
     text-align: center;
 }
-@media screen {
+@media screen and (max-width:600px){
+    {
+        width: 50%;
+    }
     
 }
