--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body{
     margin: 0;
 }
+h1{
+    text-transform: uppercase;
+}
 .navbar{
     background-color:purple;
     color: rgb(255, 255, 255);
