--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@ h1{
 .gif{
     width: 24rem;
     margin: 2rem;
+    z-index: -1;
+    position: absolute;
+    opacity: 5%;
 }
 .imgcontact{
     display: flexbox;
