--- a/styles.css
+++ b/styles.css
@@ -36,12 +36,12 @@ span{
     color: #F9F5EB;
 }
 .main{
+    display: grid ;
     margin: 10px;
     padding-bottom: 700px;
 }
 .card{
     border: #3C486B;
-    float: left;
     width: 500px;
     margin-right:100px ;
 }
