--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@ body{
 h1{
     text-transform: uppercase;
 }
+a{
+    text-decoration: none;
+}
 .header{
     padding: 120px;
 }
@@ -26,6 +29,8 @@ h1{
     background-color: #3C486B;
     margin: 0;
     color: #F9F5EB;
+    text-transform: uppercase;
+    font-weight: 900;
 }
 .sub-title{
     background-color: #3C486B;
@@ -43,6 +48,7 @@ span{
     gap: 100px;
     margin-left: 100px;
     padding-bottom: 200px;
+    margin-top: 5em;
 }
 .card{
     border: #3C486B;
