--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+:root{
+    --main-color:#3C486B;
+    --sub-color:#F9F5EB;
+}
 body{
     margin: 0;
     font-family: 'Roboto Mono', monospace;
     text-align: center;
     text-decoration: none;
-    background-color: #F9F5EB;
+    background-color:var(--sub-color);
+    max-width: 100%;
+    overflow-x: hidden;
 }
 h1{
     text-transform: uppercase;
@@ -26,20 +32,20 @@ a{
 }
 .main-title{
     font-size:  5rem;
-    background-color: #3C486B;
+    background-color: var(--main-color);
     margin: 0;
-    color: #F9F5EB;
+    color:var(--sub-color);
     text-transform: uppercase;
     font-weight: 900;
 }
 .sub-title{
-    background-color: #3C486B;
+    background-color: var(--main-color);
     margin: 0;
-    color: #F9F5EB;
+    color:var(--sub-color);
 }
 span{
-    background-color: #3C486B;
-    color: #F9F5EB;
+    background-color: var(--main-color);
+    color:var(--sub-color);
 }
 .main{
     display: grid;
@@ -51,7 +57,7 @@ span{
     margin-top: 5em;
 }
 .card{
-    border: #3C486B;
+    border: var(--main-color);
     width: 500px;
     margin-right:100px ;
 }
@@ -62,7 +68,7 @@ span{
     text-align: center;
     padding: 5px;
     font-weight: bold;
-    background-color: #3C486B;
+    background-color: var(--main-color);
 }
 .footer li{
     display: inline-block;
@@ -70,7 +76,7 @@ span{
     list-style: none;
 }
 footer p{
-    color: #F9F5EB;
+    color:var(--sub-color);
 }
 footer img{
  height: 30px;
@@ -78,6 +84,25 @@ footer img{
 .para{
     font-size: 20px;
     font-weight: bold;
+}
+#canvasbtn{
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    border-style: none;
+    background: var(--main-color);
+    border: var(--sub-color) solid 1px;
+    color: var(--sub-color);
+    margin-top: 10px;
+}
+#canvasbtn:hover{
+    cursor: pointer;
+    background-color: var(--sub-color);
+    border: var(--main-color) solid 1px;
+    color: var(--main-color);
+}
+canvas{
+    background-color: white;
 }
 
 @media screen and (max-width:600px){
