--- a/styles.css
+++ b/styles.css
@@ -49,8 +49,8 @@ span{
 }
 .main{
     display: grid;
-    grid-template-columns: repeat(3,auto);
-    grid-template-rows: repeat(3,auto);
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,1fr);
     gap: 100px;
     margin-left: 100px;
     padding-bottom: 200px;
