--- a/styles.css
+++ b/styles.css
@@ -107,9 +107,10 @@ canvas {
 @media screen and (max-width: 375px) {
   .header {
     padding: 20px;
+    margin: 0;
   }
   .card img {
-    height: 200px;
+    height: 150px;
   }
   .main-title {
     font-size: 4rem;
@@ -128,9 +129,6 @@ canvas {
   }
 }
 @media screen and (max-width: 600px) {
-  body {
-    width: 50%;
-  }
   .gif {
     width: 50%;
   }
@@ -138,7 +136,7 @@ canvas {
     display: grid;
     grid-template-columns: repeat(1, auto);
     grid-template-rows: repeat(3, auto);
-    gap: 100px;
+    gap: 20px;
     margin-left: 0px;
   }
 }
