--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,24 @@ a {
   text-decoration: none;
 }
 .header {
-  padding: 120px;
+  padding: 120px 0px;
+}
+.header-black {
+  padding: 30px 0px 30px;
+  position: relative;
+  margin: 20px 0px 200px;
+  background: var(--main-color);
+}
+.header-black::after {
+  content: "";
+  background: var(--main-color);
+  position: absolute;
+  inset: 0;
+  transform: skewY(5deg);
+  z-index: -1;
+}
+.header-black p {
+  color: var(--sub-color);
 }
 .header img {
   width: 30px;
