--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,12 @@ a {
 .header {
   padding: 120px 0px;
 }
-.header-black {
+.header-black-tilted {
   padding: 30px 0px 30px;
   position: relative;
-  margin: 20px 0px 200px;
-  background: var(--main-color);
+  margin: 200px 0px 200px;
 }
-.header-black::after {
+.header-black-tilted::after {
   content: "";
   background: var(--main-color);
   position: absolute;
@@ -33,7 +32,7 @@ a {
   transform: skewY(5deg);
   z-index: -1;
 }
-.header-black p {
+.header-black-tilted p {
   color: var(--sub-color);
 }
 .header img {
@@ -52,8 +51,8 @@ a {
 .sub-title {
   background-color: var(--sub-color);
   color: var(--main-color);
-  padding: 5px 50px;
-  margin: 10px 0px;
+  padding: 5px;
+  margin: 10px 900px;
   font-weight: 600;
 }
 .sub-title-black {
