--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ a {
   padding: 120px 0px;
 }
 .header-black-tilted {
-  padding: 30px 0px 30px;
+  padding: 70px 0px 30px;
   position: relative;
   margin: 200px 0px 200px;
 }
@@ -52,7 +52,7 @@ a {
   background-color: var(--sub-color);
   color: var(--main-color);
   padding: 5px;
-  margin: 10px 900px;
+  margin: 10px 200px;
   font-weight: 600;
 }
 .sub-title-black {
@@ -145,6 +145,9 @@ canvas {
   }
   .main-title {
     font-size: 4rem;
+  }
+  .sub-title {
+    margin: 10px 100px;
   }
   .para {
     width: clamp(100px, 280px, 400px);
