--- a/styles.scss
+++ b/styles.scss
@@ -1,14 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
-:root {
-  --main-color: #3c486b;
-  --sub-color: #f9f5eb;
-}
+$main-color: #3c486b;
+$sub-color: #f9f5eb;
+
 body {
   margin: 0;
   font-family: "Roboto Mono", monospace;
   text-align: center;
   text-decoration: none;
-  background-color: var(--sub-color);
+  background-color: $sub-color;
 }
 h1 {
   text-transform: uppercase;
@@ -27,14 +26,16 @@ a {
 }
 .header-black-tilted::after {
   content: "";
-  background: var(--main-color);
+  background: $main-color;
   position: absolute;
   inset: 0;
   transform: skewY(5deg);
   z-index: -1;
 }
-.header-black-tilted p {
-  color: var(--sub-color);
+.header-black-tilted b {
+  display: block;
+  margin-top: 0.5rem;
+  color: $sub-color;
 }
 .header img {
   width: 30px;
@@ -43,26 +44,26 @@ a {
 }
 .main-title {
   font-size: 5rem;
-  background-color: var(--main-color);
+  background-color: $main-color;
   margin: 0;
-  color: var(--sub-color);
+  color: $sub-color;
   text-transform: uppercase;
   font-weight: 900;
 }
 .sub-title {
-  background-color: var(--sub-color);
-  color: var(--main-color);
+  background-color: $sub-color;
+  color: $main-color;
   padding: 5px;
   margin: 10px 0px;
   font-weight: 600;
 }
 .sub-title-black {
-  background-color: var(--main-color);
-  color: var(--sub-color);
+  background-color: $main-color;
+  color: $sub-color;
 }
 span {
-  background-color: var(--main-color);
-  color: var(--sub-color);
+  background-color: $main-color;
+  color: $sub-color;
 }
 .main {
   display: grid;
@@ -73,12 +74,12 @@ span {
   margin-top: 80px;
 }
 .card {
-  border: var(--main-color);
+  border: $main-color;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: var(--sub-color);
+  background-color: $sub-color;
   /* border-radius: 10px; */
   margin: 0px 0px 20px 0px;
 }
@@ -89,7 +90,7 @@ span {
 footer {
   text-align: center;
   font-weight: bold;
-  background-color: var(--main-color);
+  background-color: $main-color;
   padding: 5px;
   position: sticky;
 }
@@ -105,31 +106,31 @@ footer img {
   font-size: 1.25rem;
   font-weight: bold;
   width: clamp(100px, 400px, 400px);
-  background-color: var(--main-color);
-  color: var(--sub-color);
+  background-color: $main-color;
+  color: $sub-color;
 }
 .para-black {
   font-size: 1.25rem;
   font-weight: bold;
-  background-color: var(--main-color);
-  color: var(--sub-color);
+  background-color: $main-color;
+  color: $sub-color;
 }
 #canvasbtn {
   width: 150px;
   height: 30px;
   border-radius: 10px;
   border-style: none;
-  background: var(--sub-color);
-  border: var(--main-color) solid 1px;
-  color: var(--main-color);
+  background: $sub-color;
+  border: $main-color solid 1px;
+  color: $main-color;
   margin-bottom: 10px;
   font-weight: 900;
 }
 #canvasbtn:hover {
   cursor: pointer;
-  background-color: var(--main-color);
-  border: var(--sub-color) solid 1px;
-  color: var(--sub-color);
+  background-color: $main-color;
+  border: $sub-color solid 1px;
+  color: $sub-color;
 }
 canvas {
   height: clamp(200px, 300px, 400px);
