--- a/styles.scss
+++ b/styles.scss
@@ -91,7 +91,18 @@ footer {
   padding: 20px;
   position: sticky;
   a img {
-    height: 30px;
+    animation-name: spin;
+    animation-duration: 5000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
   }
   div b,
   img {
